user permission view created

--- a/themes/default/common/header.html
+++ b/themes/default/common/header.html
@@ -43,6 +43,7 @@
 
 	<!-- CSS : LOCAL : PAGES -->
 	<link rel="stylesheet" type="text/css" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/style-attendance.css" />
+	<link rel="stylesheet" type="text/css" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/style-backup.css" />
 	<link rel="stylesheet" type="text/css" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/style-exam.css" />
 	<link rel="stylesheet" type="text/css" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/style-health.css" />
 	<link rel="stylesheet" type="text/css" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/style-login.css" />
