grade edit completed

--- a/themes/default/school/index.html
+++ b/themes/default/school/index.html
@@ -537,7 +537,7 @@
                 </div>
 
                 <div class="modal-body">
-
+                    <input type="hidden" id="modal-edit-grade-id" value="" />
                     <form method="post">
 
                         <div class="col-12">
