--- a/themes/default/staff/search.html
+++ b/themes/default/staff/search.html
@@ -217,7 +217,7 @@
                                             <td class="text-center">{{ staff.dob }}</td>
                                             <td class="text-center">{{ staff.gender }}</td>
                                             <td> {{ staff.name }}</td>                                        
-                                            <td class="text-center"><button type="button" class="btn btn-xs btn-success"><i class="la la-user"></i>View Profile</button></td>
+                                            <td class="text-center"><a href="{{ app.url }}/staff/profile"><button type="button" class="btn btn-xs btn-success"><i class="la la-user"></i>View Profile</button></a></td>
                                         </tr>
                                     {% endfor %}
                                 </tbody>
