--- a/themes/default/student/search.html
+++ b/themes/default/student/search.html
@@ -224,7 +224,9 @@
                                             <td class="text-center">{{ student.gender }}</td>
                                             <td class="text-center">{{ student.city }}</td>
                                             <td> {{ student.name }}</td>                                        
-                                            <td class="text-center"><button type="button" class="btn btn-xs btn-success"><i class="la la-user"></i>View Profile</button></td>
+                                            <td class="text-center">
+                                                <a href="{{ app.url }}/student/profile"><button type="button" class="btn btn-xs btn-success"><i class="la la-user"></i>View Profile</button></a>
+                                            </td>
                                         </tr>
                                     {% endfor %}
                                 </tbody>
